Layout bug fix

--- a/frontend/src/less/episodessidebar.less
+++ b/frontend/src/less/episodessidebar.less
@@ -4,6 +4,7 @@
 	display: inline-block;
 	overflow: hidden;
 	width: 40%;
+	height: 100%;
 	@media @min350 and @max768 {
 		width: 100%;
 	}
