--- a/frontend/src/style/episodeslist.css
+++ b/frontend/src/style/episodeslist.css
@@ -2,5 +2,6 @@
 	text-align: left;
 	overflow-y: scroll;
   max-height: 320px;
+  height: 60%;
   margin-top: 2px;
 }
